# saber-qa-bot

./: README.md  parser.py  setup.cfg  setup.py
src/calculator/: calculator.py  constants.py  parser.py
src/tg_bot/: auth.py  serve.py  text.py
tests/: test_calculator.py  test_parser.py
