[metadata]
name = calculator-bot
author = jstr
version = 0.0.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    aiogram == 2.20

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        calculator_repr = calculator.calculator:repr
        serve_bot = tg_bot.serve:main